--- a/portail/client/src/app/map-panel-switcher-components/layer-tree/layer-tree.component.html
+++ b/portail/client/src/app/map-panel-switcher-components/layer-tree/layer-tree.component.html
@@ -100,7 +100,7 @@
                                     </span>
                                 </div>
                                 <div class="card card-body" style="width: 18rem;">
-
+<!-- A INTEGRER APRES AVOIR INSTALLÉ LE PLUGIN SUR GEOSERVER!
                                     <span *ngIf="feature.download_gpkg" 
                                         style="cursor:pointer;margin: 3px"
                                         (click)="onGeopkgDownload($event,feature)" 
@@ -114,7 +114,7 @@
                                     >
                                         <i class="fa fa-arrow-circle-o-down" aria-hidden="true"></i> gpkg
                                     </span>
-
+-->
                                     <span *ngIf="feature.download_csv" 
                                         style="cursor:pointer;margin: 3px"
                                         (click)="onCsvDownload($event,feature)" 
