big commit with all changes

--- a/portail/client/src/app/main/main.component.html
+++ b/portail/client/src/app/main/main.component.html
@@ -10,7 +10,7 @@
       <app-header></app-header>
       <app-permalink class="d-none d-md-block"></app-permalink> 
       <span id="report-bug" class="d-none d-md-block">
-        <a href="https://gitlab.com/g2600/ch-osm" target="_blank"> {{ 'main.bug' | translate }}</a> 
+        <a href="https://gitlab.com/OKurdi/ch-osm/-/issues/new" target="_blank"> {{ 'main.bug' | translate }}</a> 
       </span>
     </div>
 
