--- a/portail/client/src/styles.css
+++ b/portail/client/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
 
 .centered_loading{
     transform: scale(3, 3);
@@ -74,7 +77,6 @@
   }
 
   
-
 
 
 .btn-warning{
