--- a/portail/client/src/styles.css
+++ b/portail/client/src/styles.css
@@ -143,6 +143,45 @@ body {
 .ol-zoom {
   left: 10px;
 	top: 60px;
+  background-color: #CC1417;
+  border-radius: 4px;
+  border-color: white; 
+}
+
+.ol-zoom .ol-zoom-in, .ol-zoom .ol-zoom-out {
+  background-color: #CC1417; 
+  color: #ffffff; 
+  border: 1px solid white; 
+}
+
+.ol-zoom .ol-zoom-in:hover, .ol-zoom .ol-zoom-out:hover {
+  background-color: #AA1438; 
+}
+/*
+.ol-zoom .ol-zoom-in:active, .ol-zoom .ol-zoom-out:active {
+  background-color: #ffffff; 
+  color: #CC1417; 
+  border-color: white; 
+}*/
+
+.ol-zoom .ol-zoom-in:focus, .ol-zoom .ol-zoom-out:focus {
+  outline: none; 
+  box-shadow: none; 
+}
+
+.ol-zoom .ol-zoom-level {
+  color: #CC1417;
+}
+
+.ol-scale-line-inner {
+  background-color: #CC1417; 
+  color: #ffffff; 
+}
+
+.ol-scale-line {
+  background-color: #CC1417 !important; 
+  color: #ffffff !important; 
+  border-color: #CC1417 !important; 
 }
 
 app-changes-detailled-map .ol-zoom{
@@ -196,7 +235,6 @@ h3 {
 
 input[type=range] {
   height: 17px;
-  -webkit-appearance: none;
   margin: 10px 0; 
 }
 input[type=range]:focus {
@@ -206,15 +244,14 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #ADC8D9;
+  background: #CC1417;
   border-radius: 7px;
   border: 0px solid #000000;
 }
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #738E9C;
+  border: 1px solid #CC1417;
   height: 10px;
   width: 10px;
   border-radius: 10px;
@@ -224,21 +261,20 @@ input[type=range]::-webkit-slider-thumb {
   margin-top: -4px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #ADC8D9;
+  background: #CC1417;
 }
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
-  background: #ADC8D9;
+  background: #CC1417;
   border-radius: 7px;
   border: 0px solid #000000;
 }
 input[type=range]::-moz-range-thumb {
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #738E9C;
+  border: 1px solid #CC1417;
   height: 10px;
   width: 10px;
   border-radius: 10px;
@@ -249,19 +285,18 @@ input[type=range]::-ms-track {
   width: 100%;
   height: 3px;
   cursor: pointer;
-  animate: 0.2s;
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #ADC8D9;
+  background: #CC1417;
   border: 0px solid #000000;
   border-radius: 14px;
   box-shadow: 0px 0px 0px #000000;
 }
 input[type=range]::-ms-fill-upper {
-  background: #ADC8D9;
+  background: #CC1417;
   border: 0px solid #000000;
   border-radius: 14px;
   box-shadow: 0px 0px 0px #000000;
@@ -269,7 +304,7 @@ input[type=range]::-ms-fill-upper {
 input[type=range]::-ms-thumb {
   margin-top: 1px;
   box-shadow: 0px 0px 0px #000000;
-  border: 1px solid #738E9C;
+  border: 1px solid #CC1417;
   height: 10px;
   width: 10px;
   border-radius: 10px;
@@ -277,8 +312,8 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #ADC8D9;
+  background: #CC1417;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #ADC8D9;
+  background: #CC1417;
 }
