change image thumbnail

--- a/portail/client/src/app/map-panel-switcher-components/map-controller/map-controller.component.html
+++ b/portail/client/src/app/map-panel-switcher-components/map-controller/map-controller.component.html
@@ -32,7 +32,7 @@
       <div class="radio-option">
         <input type="radio" id="osmRadio" name="baseLayer" value="OSM" checked (change)="changeBaseLayer($event, 'OSM')">
         <label for="osmRadio">
-            <img src="\assets\images\osm-thumbnail.png" alt="OSM" width="50" height="50">
+            <img src=".\assets\images\osm-thumbnail.png" alt="OSM" width="50" height="50">
             OpenStreetMap
         </label>
     </div>
@@ -40,7 +40,7 @@
     <div class="radio-option">
         <input type="radio" id="swisstopoRadio" name="baseLayer" value="swisstopo" (change)="changeBaseLayer($event, 'swisstopo')">
         <label for="swisstopoRadio">
-            <img src="\assets\images\swisstopo-thumbnail.png" alt="Swisstopo" width="50" height="50">
+            <img src=".\assets\images\swisstopo-thumbnail.png" alt="Swisstopo" width="50" height="50">
             Swisstopo
         </label>
     </div>
@@ -48,7 +48,7 @@
     <div class="radio-option">
         <input type="radio" id="swissimageRadio" name="baseLayer" value="swissimage" (change)="changeBaseLayer($event, 'swissimage')">
         <label for="swissimageRadio">
-            <img src="\assets\images\swissimage-thumbnail.png" alt="Swissimage" width="50" height="50">
+            <img src=".\assets\images\swissimage-thumbnail.png" alt="Swissimage" width="50" height="50">
             Orthophoto
         </label>
     </div> 
