--- a/portail/client/src/app/map-panel-switcher-components/layer-tree/layer-tree.component.css
+++ b/portail/client/src/app/map-panel-switcher-components/layer-tree/layer-tree.component.css
@@ -30,12 +30,12 @@
   line-height: 12px;
   text-align: center;
   background: #be7079;
-  /* vertical-align: text-top; */
 }
 
 .form-check-label{
   margin-right: 2px;
   padding-left: 10px;
+  align-items: center; /* Centre le contenu verticalement */
 }
 
 .card-header:hover {
@@ -44,14 +44,13 @@
 
 .layer-entry:hover {
   cursor: pointer;
+  align-items: center;
 }
 
-/* Ajoutez ces styles CSS pour définir la couleur de fond rouge */
 .layer-entry .selected {
   background-color: red;
 }
 
-/* Pour supprimer les cases à cocher */
 .layer-entry .form-check-label {
   cursor: pointer;
   padding-left: 10px;
@@ -82,7 +81,6 @@ h4 {
   text-align: center; 
 }
 .lds-ring {
-	/*background-color: lightskyblue;*/
 	z-index: 100000;
 	display: inline-block;
 	position: relative;
@@ -131,7 +129,7 @@ h4 {
 }
 
 .layer-entry.visible {
-  background: #dae2ec;
+  background-color: hsla(0, 8%, 43%, 0.1);
 }
 
 .circle-icon {
@@ -148,8 +146,8 @@ h4 {
 }
 
 
-/* Slider cursor; see styles.css for more details */
 input[type=range] {
+  appearance: none;
   width: 60px; 
 }
 :host > div > div > div > div > div > a > div > div > div.card.card-body {
