--- a/portail/client/src/app/map-panel-switcher/map-panel-switcher.component.html
+++ b/portail/client/src/app/map-panel-switcher/map-panel-switcher.component.html
@@ -11,21 +11,23 @@
     </a>
   </tr>
   <tr>
-    <div class="btn-group dropleft">
-      <button #dropdownButton class="btn btn-primary dropleft"  data-toggle="dropdown">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-translate" viewBox="0 0 16 16">
-        <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"/>
-        <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"/>
-        </svg>
-      </button>
-      <div class="dropdown-menu dropdown-menu-right">
-        <button class="dropdown-item" type="button" (click)="useLanguage('de')" >Deutsch</button>
-        <button class="dropdown-item" type="button" (click)="useLanguage('fr')" >Français</button>
-        <button class="dropdown-item" type="button" (click)="useLanguage('it')" >Italiano</button>
-        <button class="dropdown-item" type="button" (click)="useLanguage('rm')" >Rumantsch</button>
-        <button class="dropdown-item" type="button" (click)="useLanguage('en')" >English</button>
+    <td>
+      <div class="btn-group dropleft">
+        <button #dropdownButton class="btn btn-primary dropleft" data-toggle="dropdown" (click)="closeMapControllerCollapse()">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-translate" viewBox="0 0 16 16">
+            <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"/>
+            <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"/>
+          </svg>
+        </button>
+        <div class="dropdown-menu dropdown-menu-right transparent-dropdown" #dropdownMenu>
+          <button class="dropdown-item" type="button" (click)="useLanguage('de')" data-lang="de">Deutsch</button>
+          <button class="dropdown-item" type="button" (click)="useLanguage('fr')" data-lang="fr">Français</button>
+          <button class="dropdown-item" type="button" (click)="useLanguage('it')" data-lang="it">Italiano</button>
+          <button class="dropdown-item" type="button" (click)="useLanguage('rm')" data-lang="rm">Rumantsch</button>
+          <button class="dropdown-item" type="button" (click)="useLanguage('en')" data-lang="en">English</button>
+        </div>
       </div>
-    </div>
+    </td>
   </tr>
   <tr>
     <td>
@@ -37,7 +39,7 @@
           </svg>
         </button>
         <div #mapControllerCollapse class="collapse" [class.show]="!isMapControllerCollapsed" id="mapControllerCollapse">
-          <app-map-controller [userContext]="userContext"></app-map-controller>
+          <app-map-controller #appMapController [userContext]="userContext"></app-map-controller>
         </div>        
       </div>
     </td>
@@ -61,16 +63,10 @@
   data-toggle="popover"
   data-html="true"
   translate="true"
-  data-content="<img src='assets/images/GIF-CH-OSM.gif' height='200' width='200'>"
   data-placement="right"
 >
   <div class="panel-switcher-nav" role="tab">
-    <!-- To close the panel switcher 
-    <a id="panel-switcher-close" href="#" class="btn btn-outline-secondary btn-sm pull-right toggle">
-      <i class="fa fa-times" aria-hidden="true"></i>
-    </a>-->
     <app-layer-tree [hidden]="panelToShow != 'layerTree'" [userContext]="userContext" id="layerTree"></app-layer-tree>
-<!--     <app-map-controller *ngIf="panelToShow == 'carte'" [userContext]="userContext"></app-map-controller> -->
     <app-legend
       *ngIf="panelToShow === 'legende'"
       [legendUrls]="mapService.legendUrls" [legendSubTitles]="mapService.legendSubTitles" [legendTitle]="mapService.legendTitle"
