fix collapse error with name court

--- a/portail/client/src/app/feature-panel/feature-panel.component.html
+++ b/portail/client/src/app/feature-panel/feature-panel.component.html
@@ -38,7 +38,7 @@
 
         <!-- Short_name of the selected Layer at the top of the feature panel -->
         <div id=selectedLayer>
-            <span class="badge badge-secondary" title="Couche de l'objet">{{selectedLayer.nom_court | translate}}</span>
+            <span class="badge badge-secondary" title="Couche de l'objet">{{selectedLayer.layername | translate}}</span>
         </div>
 
         <!-- Info table with general informations about the selected feature -->
